fixed dropdown not hiding on iOS12

--- a/main.css
+++ b/main.css
@@ -394,7 +394,7 @@ backdrop-filter: blur(30px);
     position:absolute;
     width: 20em;
     height: 20em; 
-    top: 70%;
+    top: 65%;
   }
   
 } 
@@ -419,7 +419,7 @@ backdrop-filter: blur(30px);
     position:absolute;
     width: 17em;
     height: 17em; 
-    top: 68%;
+    top: 65%;
   }
 
    #H3 {
